03-ingress.yml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: webalb
#   annotations:
#     alb.ingress.kubernetes.io/load-balancer-name: test-alb
#     kubernetes.io/ingress.class: alb
#     alb.ingress.kubernetes.io/target-type: instance
#     alb.ingress.kubernetes.io/scheme: internet-facing
#     alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
# spec:
#   # ingressClassName: ingress.k8s.aws/alb
#   rules:
#   - host: app.showyrskills.in
#     http:
#       paths:
#       - pathType: Prefix
#         path: "/"
#         backend:
#           service:
#             name: app1-nginx-nodeport-service
#             port: 
#               number: 80
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    # Load Balancer Name
    alb.ingress.kubernetes.io/load-balancer-name: test-alb
    # Ingress Core Settings
    #kubernetes.io/ingress.class: "alb" (OLD INGRESS CLASS NOTATION - STILL WORKS BUT RECOMMENDED TO USE IngressClass Resource)
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    #Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer    
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    ## enter the certificate arn
    # alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:<>:certificate/73cd7c9d-7df9-48f7-b487-4389b34163f6
    ## SSL redirect. Redirect from http to https
    # alb.ingress.kubernetes.io/ssl-redirect: '443'   
spec:
  ingressClassName: test-class  # Ingress Class                       
  rules:
    - http:
        paths:           
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1-nginx-nodeport-service
                port: 
                  number: 80
